# insect

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
data/: __init__.py  data_loader.py
dataset/: __init__.py  data_loader.py
model/: __init__.py  model.py
scripts/: eval.py  gen_index.py  gen_label.py  label.py  once.py  train.py
utils/: __init__.py  config.py  log.py
